@@ -1,3 +1,8 @@
+2010-02-15  Nick Clifton  <nickc@redhat.com>
+
+	* configure.ac: Sync from gcc.
+	* configure: Regenerate.
+
 2010-01-31  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	Sync from gcc:
